--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -81,8 +81,8 @@
                             <img src="{% static 'urbanacro/images/acrofestival_3rd_edition.jpg' %}" alt="" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
-                            <h6>4th. Urban Acro Festival</h6>
-                            <p>Time for another UAF! hope we continue to be so lucky and not have to skip a single one!
+                            <h6>5th. Urban Acro Festival</h6>
+                            <p>Time for another UAF! Hope we continue to be so lucky and not have to skip a single one!
                                 We have selected great teachers/friends around Switzerland and Europe
                                 and are happy to share with you a cool mix of different challenging and fun
                                 acro workshops over this weekend festival.</p>
@@ -240,67 +240,65 @@
     <section id="teachers" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
-            <h3>Teachers 2022 - Comming Soon</h3>
+            <h3>Teachers 2022</h3>
             <p class="text-alt">Soon <span class="highlight"> International and Swiss teachers.</span></p>
             <br />
             <br />
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marysiaijulian.jpg' %}" alt="Marysia and Julian at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Marysia & Julian</h3> -->
-            <!--         <p class="text-alt"><small>Icarian Zirkus Style</small></p> -->
-            <!--         <p class="about">It's the first teachers we invite that we haven't had the pleasure to meet. They 'inspired' ;-) more then one of our training sessions and have a acro style we really like! After some research, everyone said we should invite them! So here we are! Eager to learn from this two! -->
-            <!--         <a href="https://www.instagram.com/marysiaijulian/">@marysiaijulina</a> -->
-            <!--         </p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <!-- <!-1- Teachers Come here -1-> -->
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_melindawildmann.jpg' %}" alt="Milinda Wildman & Tibor Ihasz Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Melinda & Tibor</h3> -->
-            <!--         <p class="text-alt"><small>Dance dance revolution!</small></p> -->
-            <!--         <p class="about">Last year some of you where all over us: "We want more Acro Dance" you said. Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival ;-) . We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_julikaandjannik.jpg' %}" alt="Julika and Jannik, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Julita & Jannik</h3> -->
-            <!--         <p class="text-alt"><small>Direct import aus Hamburg</small></p> -->
-            <!--         <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik co-founded <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and Julia went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Fadri & Leona</h3> -->
-            <!--         <p class="text-alt"><small>Creative Acro Flows</small></p> -->
-            <!--         <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon! -->
-            <!--         </p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marie_tomas.jpg' %}" alt="Marie and Tomas at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Tomas and Marie</h3> -->
-            <!--         <p class="text-alt"><small>Acro Adventure</small></p> -->
-            <!--         <p class="about">Tomas and Marie fell in love at New Years Acro, started a road trip, got married and teach together as team AcroAdventure. --> 
-<!-- It seems like there is an ongoing smiling competition between them two. They bring a wealth of AcroYoga flow experience and can’t wait to teach here in Zürich! -->
-<!-- <a href="www.acroadventure.com">www.acroadventure.com</a> -->
-            <!--         </p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_jarno_tacha.jpg' %}" alt="Jarno and Tacha Acroatia at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div>
+                    <h3 class="name">Jarno & Tacha</h3>
+                    <p class="text-alt"><small>Standing Dynamic Acrobatics</small></p>
+                    <p class="about">Just saw Jarno again in Acroatia, what a wonderful experience it is. It's just cool when a teacher knows their craft and has a sense humor and technique. This time with Tacha they come to the Urban Acro directly from Belgium, where they perform in diverse Circus shows, to share some Standing Acro with us. Thanks for coming!
+                    <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
+                    </p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <!-- Teachers Come here -->
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
+                    <h3 class="name">Uwe and Jasmina</h3>
+                    <p class="text-alt"><small>Le Icarian Akrosphare</small></p>
+                    <p class="about">Love this two Artists from Austria. They come to show us some Icarian and Group acro. Have you seen their show? It's all about it! Just amazing!! Where also recently in the Icarian Acro Convention in Spain. Thanks for being with us now!
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Josh and Cloe, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
+                    <h3 class="name">Josh and Cloe</h3>
+                    <p class="text-alt"><small>Swiss International product</small></p>
+                    <p class="about">They just always manage too surprise me. Acrobatically of course, but also as humans, dancers, performers, been super lucky to see their path from the start. Thanks for coming back this year!
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
+                    <h3 class="name">Fadri & Leona</h3>
+                    <p class="text-alt"><small>Creative Acro Flows</small></p>
+                    <p class="about">Fadri is our biggest nerd in the Acrolama Team <heart> for over two years now and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
+                    </p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_celine.jpg' %}" alt="Celine at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
+                    <h3 class="name">Tomas and Marie</h3>
+                    <p class="text-alt"><small>Acro Adventure</small></p>
+                    <p class="about">Celine is probably the oldest acroyogi I know. Has seen it all and is still the most humble and loving teacher of them all. We finally managed to get her to live in Switzerland after importing her from Belgium. She will be sharing some handstand, flows and who knows maybe some Thai Massage ;-)? See you sooon!!
+                    </p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -318,9 +316,9 @@
 
                     <!-- Navigation by day start -->
                     <ul class="nav nav-schedule">
-                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">27/08/2020</p></a></li>
-                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">28/08/2020</p></a></li>
-                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">29/08/2020</p></a></li>
+                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">27/08/2022</p></a></li>
+                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">28/08/2022</p></a></li>
+                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">29/08/2022</p></a></li>
                     </ul>
                     <!-- Navigation by day end -->
 
