--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -259,7 +259,7 @@
             <!-- Teachers Come here -->
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina.jpg' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
                     <h3 class="name">Uwe and Jasmina</h3>
                     <p class="text-alt"><small>Le Icarian Akrosphare</small></p>
                     <p class="about">Love this two Artists from Austria. They come to show us some Icarian and Group acro. Have you seen their show? It's all about it! Just amazing!! Where also recently in the Icarian Acro Convention in Spain. Thanks for being with us now!
