--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -253,6 +253,7 @@
                     <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
                     </p>
                     <ul class="speaker-socials">
+                    <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
                     </ul>
                 </div>
             </div>
@@ -260,7 +261,7 @@
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina.jpg' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
-                    <h3 class="name">Uwe and Jasmina</h3>
+                    <h3 class="name">Uwe & Jasmina</h3>
                     <p class="text-alt"><small>Le Icarian Akrosphare</small></p>
                     <p class="about">Love this two Artists from Austria. They come to show us some Icarian and Group acro. Have you seen their show? It's all about it! Just amazing!! Where also recently in the Icarian Acro Convention in Spain. Thanks for being with us now!
                     <ul class="speaker-socials">
@@ -270,10 +271,11 @@
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Josh and Cloe, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
-                    <h3 class="name">Josh and Cloe</h3>
-                    <p class="text-alt"><small>Swiss International product</small></p>
-                    <p class="about">They just always manage too surprise me. Acrobatically of course, but also as humans, dancers, performers, been super lucky to see their path from the start. Thanks for coming back this year!
+                    <h3 class="name">Josh & Cloe</h3>
+                    <p class="text-alt"><small>Dream Team</small></p>
+                    <p class="about">They just always manage too surprise me. Acrobatically of course, but also as humans, dancers, performers, been super lucky to see their path from the start. They just recently finshed their circus studies in Portugal and have been performing ever since. Thanks for coming back this year!
                     <ul class="speaker-socials">
+                    <a href="https://www.instagram.com/josh_and_cloe/">@josh_and_cloe</a>
                     </ul>
                 </div>
             </div>
@@ -291,7 +293,7 @@
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_celine.jpg' %}" alt="Celine at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
-                    <h3 class="name">Tomas and Marie</h3>
+                    <h3 class="name">Celine</h3>
                     <p class="text-alt"><small>Acro Adventure</small></p>
                     <p class="about">Celine is probably the oldest acroyogi I know. Has seen it all and is still the most humble and loving teacher of them all. We finally managed to get her to live in Switzerland after importing her from Belgium. She will be sharing some handstand, flows and who knows maybe some Thai Massage ;-)? See you sooon!!
                     </p>
