--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -250,7 +250,6 @@
                     <h3 class="name">Jarno & Tacha</h3>
                     <p class="text-alt"><small>Standing Dynamic Acrobatics</small></p>
                     <p class="about">Just saw Jarno again in Acroatia, what a wonderful experience it is. It's just cool when a teacher knows their craft and has a sense humor and technique. This time with Tacha they come to the Urban Acro directly from Belgium, where they perform in diverse Circus shows, to share some Standing Acro with us. Thanks for coming!
-                    <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
                     </p>
                     <ul class="speaker-socials">
                     <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
@@ -298,6 +297,18 @@
                     <p class="about">Celine is probably the oldest acroyogi I know. Has seen it all and is still the most humble and loving teacher of them all. We finally managed to get her to live in Switzerland after importing her from Belgium. She will be sharing some handstand, flows and who knows maybe some Thai Massage ;-)? See you sooon!!
                     </p>
                     <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_dani_ursina.jpg' %}" alt="Acro kids at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
+                    <h3 class="name">Dani, Uma & Ursina</h3>
+                    <p class="text-alt"><small>Acro kids</small></p>
+                    <p class="about">Dani founded one of the oldest acroyoga associations in Switzerland. Aside from teaching here and there, his group of Circus Kids in Basel is just so much fun! Ursina on the other hand is this natural born artist and together with Uma they make a power Trio. If enough kids around this is one you don't want to miss ! Let's see. Glad to have you with us!!.
+                    </p>
+                    <ul class="speaker-socials">
+                        <a href="https://www.instagram.com/martydaniel2/">@martydaniel2</a>
                     </ul>
                 </div>
             </div>
