--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -7,7 +7,7 @@
     <section id="hero" class="hero-section bg1 bg-cover window-height light-text">
         <ul class="socials-nav">
             <li class="socials-nav-item"><a href="https://www.facebook.com/events/1798993360240371/"><span class="fa fa-facebook"></span></a></li>
-            <li class="socials-nav-item"><a href="https://www.instagram.com/explore/tags/acrofestival/"><span class="fa fa-instagram"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.instagram.com/urban.acro"><span class="fa fa-instagram"></span></a></li>
         </ul>
         <div class="heading-block centered-block align-center">
             <div class="container">
@@ -240,78 +240,78 @@
     <section id="teachers" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
-            <h3>Teachers 2022</h3>
+            <h3>Teachers 2023</h3>
             <p class="text-alt">Soon <span class="highlight"> International and Swiss teachers.</span></p>
             <br />
             <br />
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_jarno_tacha.jpg' %}" alt="Jarno and Tacha Acroatia at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div>
-                    <h3 class="name">Jarno & Tacha</h3>
-                    <p class="text-alt"><small>Standing Dynamic Acrobatics</small></p>
-                    <p class="about">Just saw Jarno again in Acroatia, what a wonderful experience it is. It's just cool when a teacher knows their craft and has a sense humor and technique. This time with Tacha they come to the Urban Acro directly from Belgium, where they perform in diverse Circus shows, to share some Standing Acro with us. Thanks for coming!
-                    </p>
-                    <ul class="speaker-socials">
-                    <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a>
-                    </ul>
-                </div>
-            </div>
-            <!-- Teachers Come here -->
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina.jpg' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
-                    <h3 class="name">Uwe & Jasmina</h3>
-                    <p class="text-alt"><small>Le Icarian Akrosphare</small></p>
-                    <p class="about">Love this two Artists from Austria. They come to show us some Icarian and Group acro. Have you seen their show? It's all about it! Just amazing!! Where also recently in the Icarian Acro Convention in Spain. Thanks for being with us now!
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Josh and Cloe, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
-                    <h3 class="name">Josh & Cloe</h3>
-                    <p class="text-alt"><small>Dream Team</small></p>
-                    <p class="about">They just always manage too surprise me. Acrobatically of course, but also as humans, dancers, performers, been super lucky to see their path from the start. They just recently finshed their circus studies in Portugal and have been performing ever since. Thanks for coming back this year!
-                    <ul class="speaker-socials">
-                    <a href="https://www.instagram.com/josh_and_cloe/">@josh_and_cloe</a>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
-                    <h3 class="name">Fadri & Leona</h3>
-                    <p class="text-alt"><small>Creative Acro Flows</small></p>
-                    <p class="about">Fadri is our biggest nerd in the Acrolama Team <heart> for over two years now and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
-                    </p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_celine.jpg' %}" alt="Celine at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
-                    <h3 class="name">Celine</h3>
-                    <p class="text-alt"><small>Acro Adventure</small></p>
-                    <p class="about">Celine is probably the oldest acroyogi I know. Has seen it all and is still the most humble and loving teacher of them all. We finally managed to get her to live in Switzerland after importing her from Belgium. She will be sharing some handstand, flows and who knows maybe some Thai Massage ;-)? See you sooon!!
-                    </p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_dani_ursina.jpg' %}" alt="Acro kids at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
-                    <h3 class="name">Dani, Uma & Ursina</h3>
-                    <p class="text-alt"><small>Acro kids</small></p>
-                    <p class="about">Dani founded one of the oldest acroyoga associations in Switzerland. Aside from teaching here and there, his group of Circus Kids in Basel is just so much fun! Ursina on the other hand is this natural born artist and together with Uma they make a power Trio. If enough kids around this is one you don't want to miss ! Let's see. Glad to have you with us!!.
-                    </p>
-                    <ul class="speaker-socials">
-                        <a href="https://www.instagram.com/martydaniel2/">@martydaniel2</a>
-                    </ul>
-                </div>
-            </div>
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_jarno_tacha.jpg' %}" alt="Jarno and Tacha Acroatia at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Jarno & Tacha</h3> -->
+            <!--         <p class="text-alt"><small>Standing Dynamic Acrobatics</small></p> -->
+            <!--         <p class="about">Just saw Jarno again in Acroatia, what a wonderful experience it is. It's just cool when a teacher knows their craft and has a sense humor and technique. This time with Tacha they come to the Urban Acro directly from Belgium, where they perform in diverse Circus shows, to share some Standing Acro with us. Thanks for coming! -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         <a href="https://www.instagram.com/jarnobiel/">@jarnobiel</a> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <!-1- Teachers Come here -1-> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_uwe_jasmina.jpg' %}" alt="Uwe and Jasmina Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Uwe & Jasmina</h3> -->
+            <!--         <p class="text-alt"><small>Le Icarian Akrosphare</small></p> -->
+            <!--         <p class="about">Love this two Artists from Austria. They come to show us some Icarian and Group acro. Have you seen their show? It's all about it! Just amazing!! Where also recently in the Icarian Acro Convention in Spain. Thanks for being with us now! -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Josh and Cloe, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Josh & Cloe</h3> -->
+            <!--         <p class="text-alt"><small>Dream Team</small></p> -->
+            <!--         <p class="about">They just always manage too surprise me. Acrobatically of course, but also as humans, dancers, performers, been super lucky to see their path from the start. They just recently finshed their circus studies in Portugal and have been performing ever since. Thanks for coming back this year! -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         <a href="https://www.instagram.com/josh_and_cloe/">@josh_and_cloe</a> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Fadri & Leona</h3> -->
+            <!--         <p class="text-alt"><small>Creative Acro Flows</small></p> -->
+            <!--         <p class="about">Fadri is our biggest nerd in the Acrolama Team <heart> for over two years now and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon! -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_celine.jpg' %}" alt="Celine at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Celine</h3> -->
+            <!--         <p class="text-alt"><small>Acro Adventure</small></p> -->
+            <!--         <p class="about">Celine is probably the oldest acroyogi I know. Has seen it all and is still the most humble and loving teacher of them all. We finally managed to get her to live in Switzerland after importing her from Belgium. She will be sharing some handstand, flows and who knows maybe some Thai Massage ;-)? See you sooon!! -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_dani_ursina.jpg' %}" alt="Acro kids at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Dani, Uma & Ursina</h3> -->
+            <!--         <p class="text-alt"><small>Acro kids</small></p> -->
+            <!--         <p class="about">Dani founded one of the oldest acroyoga associations in Switzerland. Aside from teaching here and there, his group of Circus Kids in Basel is just so much fun! Ursina on the other hand is this natural born artist and together with Uma they make a power Trio. If enough kids around this is one you don't want to miss ! Let's see. Glad to have you with us!!. -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--             <a href="https://www.instagram.com/martydaniel2/">@martydaniel2</a> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
         </div>
     </section>
 
@@ -329,9 +329,9 @@
 
                     <!-- Navigation by day start -->
                     <ul class="nav nav-schedule">
-                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">26/08/2022</p></a></li>
-                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">27/08/2022</p></a></li>
-                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">28/08/2022</p></a></li>
+                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">15/09/2023</p></a></li>
+                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">16/09/2023</p></a></li>
+                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">17/09/2023</p></a></li>
                     </ul>
                     <!-- Navigation by day end -->
 
@@ -826,7 +826,7 @@
     <section class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Pricing</h5>
-            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answered in our<a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/" > Return Policies</a> otherwise just write us!</p>
+            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answered in our<a href="https://urbanacro.com/info/UrbanAcroFestivalPolicy/" > Return Policies</a> otherwise just write us!</p>
 
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="package-column package-bright special-column">
@@ -868,7 +868,7 @@
             <br/>
 
             <div class="sponsors">
-                <div class="sponsor big"><a href="https://www.acrolama.com/"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt="Acrolama as host of the Urban Acro Festival"></a></div>
+                <div class="sponsor big"><a href="https://www.urbanacro.com/"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt="Acrolama as host of the Urban Acro Festival"></a></div>
                 <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier colaborator of the Urban Acro festival organized by Acrolama"></a></div>
             </div>
 
@@ -884,8 +884,8 @@
                     <h3>Location</h3>
 
                     <ul class="list">
-                        <li><i class="fa fa-map-marker"></i>Flurstrasse 85, 8047 Zürich</li>
-                        <li><i class="fa fa-envelope"></i>acrolama@acrolama.com</li>
+                        <li><i class="fa fa-map-marker"></i>Hohlstrasse 256, 8004 Zürich</li>
+                        <li><i class="fa fa-envelope"></i>info@urbanacro.com</li>
                     </ul>
                 </div>
             </div>
@@ -898,16 +898,16 @@
             <div class="container">
                 <div class="col-md-6">
                     <ul class="footer-nav">
-                        <li class="footer-nav-item"><a href="https://www.acrolama.com">Contact</a></li>
-                        <li class="footer-nav-item"><a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/">Return policy</a></li>
+                        <li class="footer-nav-item"><a href="https://www.urbanacro.com">Contact</a></li>
+                        <li class="footer-nav-item"><a href="https://urbanacro.com/info/UrbanAcroFestivalPolicy/">Return policy</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 align-right">
                     <ul class="socials-nav align-right">
-                        <li class="socials-nav-item"><a href="https://facebook.com/acrolama"><span class="fa fa-facebook"></span></a></li>
-                        <li class="socials-nav-item"><a href="https://instagram.com/acrolama"><span class="fa fa-instagram"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://facebook.com/urbanacro.ch"><span class="fa fa-facebook"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://instagram.com/urban.acro"><span class="fa fa-instagram"></span></a></li>
                     </ul>
-                    <p class="text-alt"><small>All Rights Reserved © 2021</small></p>
+                    <p class="text-alt"><small>All Rights Reserved © 2023</small></p>
                 </div>
             </div>
         </div>
